ChemCode Language/parser.out
Created by PLY (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> conv
Rule 1     conv -> expression
Rule 2     conv -> var_assign
Rule 3     conv -> empty
Rule 4     expression -> expression MULTIPLY expression
Rule 5     expression -> expression DIVIDE expression
Rule 6     expression -> expression PLUS expression
Rule 7     expression -> expression MINUS expression
Rule 8     expression -> FLOAT
Rule 9     expression -> INT
Rule 10    expression -> TEXT
Rule 11    var_assign -> TEXT EQUALS expression
Rule 12    expression -> expression LANGLEBRA expression RANGLEBRA LPAR expression COMMA expression RPAR
Rule 13    expression -> expression LANGLEBRA expression RANGLEBRA LPAR expression COMMA expression COMMA expression COMMA expression RPAR
Rule 14    expression -> expression LANGLEBRA expression RANGLEBRA LPAR RPAR
Rule 15    expression -> expression LANGLEBRA expression COMMA expression RANGLEBRA LPAR expression RPAR
Rule 16    expression -> expression LANGLEBRA expression COMMA expression RANGLEBRA LPAR expression COMMA expression RPAR
Rule 17    expression -> DISCOVER
Rule 18    empty -> <empty>

Terminals, with rules where they appear

COMMA                : 12 13 13 13 15 16 16
DISCOVER             : 17
DIVIDE               : 5
EQUALS               : 11
FLOAT                : 8
INT                  : 9
LANGLEBRA            : 12 13 14 15 16
LPAR                 : 12 13 14 15 16
MINUS                : 7
MULTIPLY             : 4
PLUS                 : 6
RANGLEBRA            : 12 13 14 15 16
RPAR                 : 12 13 14 15 16
TEXT                 : 10 11
error                : 

Nonterminals, with rules where they appear

conv                 : 0
empty                : 3
expression           : 1 4 4 5 5 6 6 7 7 11 12 12 12 12 13 13 13 13 13 13 14 14 15 15 15 15 16 16 16 16 16
var_assign           : 2


state 0

    (0) S' -> . conv
    (1) conv -> . expression
    (2) conv -> . var_assign
    (3) conv -> . empty
    (4) expression -> . expression MULTIPLY expression
    (5) expression -> . expression DIVIDE expression
    (6) expression -> . expression PLUS expression
    (7) expression -> . expression MINUS expression
    (8) expression -> . FLOAT
    (9) expression -> . INT
    (10) expression -> . TEXT
    (12) expression -> . expression LANGLEBRA expression RANGLEBRA LPAR expression COMMA expression RPAR
    (13) expression -> . expression LANGLEBRA expression RANGLEBRA LPAR expression COMMA expression COMMA expression COMMA expression RPAR
    (14) expression -> . expression LANGLEBRA expression RANGLEBRA LPAR RPAR
    (15) expression -> . expression LANGLEBRA expression COMMA expression RANGLEBRA LPAR expression RPAR
    (16) expression -> . expression LANGLEBRA expression COMMA expression RANGLEBRA LPAR expression COMMA expression RPAR
    (17) expression -> . DISCOVER
    (11) var_assign -> . TEXT EQUALS expression
    (18) empty -> .

    FLOAT           shift and go to state 5
    INT             shift and go to state 6
    TEXT            shift and go to state 7
    DISCOVER        shift and go to state 8
    $end            reduce using rule 18 (empty -> .)

    conv                           shift and go to state 1
    expression                     shift and go to state 2
    var_assign                     shift and go to state 3
    empty                          shift and go to state 4

state 1

    (0) S' -> conv .



state 2

    (1) conv -> expression .
    (4) expression -> expression . MULTIPLY expression
    (5) expression -> expression . DIVIDE expression
    (6) expression -> expression . PLUS expression
    (7) expression -> expression . MINUS expression
    (12) expression -> expression . LANGLEBRA expression RANGLEBRA LPAR expression COMMA expression RPAR
    (13) expression -> expression . LANGLEBRA expression RANGLEBRA LPAR expression COMMA expression COMMA expression COMMA expression RPAR
    (14) expression -> expression . LANGLEBRA expression RANGLEBRA LPAR RPAR
    (15) expression -> expression . LANGLEBRA expression COMMA expression RANGLEBRA LPAR expression RPAR
    (16) expression -> expression . LANGLEBRA expression COMMA expression RANGLEBRA LPAR expression COMMA expression RPAR

    $end            reduce using rule 1 (conv -> expression .)
    MULTIPLY        shift and go to state 9
    DIVIDE          shift and go to state 10
    PLUS            shift and go to state 11
    MINUS           shift and go to state 12
    LANGLEBRA       shift and go to state 13


state 3

    (2) conv -> var_assign .

    $end            reduce using rule 2 (conv -> var_assign .)


state 4

    (3) conv -> empty .

    $end            reduce using rule 3 (conv -> empty .)


state 5

    (8) expression -> FLOAT .

    MULTIPLY        reduce using rule 8 (expression -> FLOAT .)
    DIVIDE          reduce using rule 8 (expression -> FLOAT .)
    PLUS            reduce using rule 8 (expression -> FLOAT .)
    MINUS           reduce using rule 8 (expression -> FLOAT .)
    LANGLEBRA       reduce using rule 8 (expression -> FLOAT .)
    $end            reduce using rule 8 (expression -> FLOAT .)
    RANGLEBRA       reduce using rule 8 (expression -> FLOAT .)
    COMMA           reduce using rule 8 (expression -> FLOAT .)
    RPAR            reduce using rule 8 (expression -> FLOAT .)


state 6

    (9) expression -> INT .

    MULTIPLY        reduce using rule 9 (expression -> INT .)
    DIVIDE          reduce using rule 9 (expression -> INT .)
    PLUS            reduce using rule 9 (expression -> INT .)
    MINUS           reduce using rule 9 (expression -> INT .)
    LANGLEBRA       reduce using rule 9 (expression -> INT .)
    $end            reduce using rule 9 (expression -> INT .)
    RANGLEBRA       reduce using rule 9 (expression -> INT .)
    COMMA           reduce using rule 9 (expression -> INT .)
    RPAR            reduce using rule 9 (expression -> INT .)


state 7

    (10) expression -> TEXT .
    (11) var_assign -> TEXT . EQUALS expression

    MULTIPLY        reduce using rule 10 (expression -> TEXT .)
    DIVIDE          reduce using rule 10 (expression -> TEXT .)
    PLUS            reduce using rule 10 (expression -> TEXT .)
    MINUS           reduce using rule 10 (expression -> TEXT .)
    LANGLEBRA       reduce using rule 10 (expression -> TEXT .)
    $end            reduce using rule 10 (expression -> TEXT .)
    EQUALS          shift and go to state 14


state 8

    (17) expression -> DISCOVER .

    MULTIPLY        reduce using rule 17 (expression -> DISCOVER .)
    DIVIDE          reduce using rule 17 (expression -> DISCOVER .)
    PLUS            reduce using rule 17 (expression -> DISCOVER .)
    MINUS           reduce using rule 17 (expression -> DISCOVER .)
    LANGLEBRA       reduce using rule 17 (expression -> DISCOVER .)
    $end            reduce using rule 17 (expression -> DISCOVER .)
    RANGLEBRA       reduce using rule 17 (expression -> DISCOVER .)
    COMMA           reduce using rule 17 (expression -> DISCOVER .)
    RPAR            reduce using rule 17 (expression -> DISCOVER .)


state 9

    (4) expression -> expression MULTIPLY . expression
    (4) expression -> . expression MULTIPLY expression
    (5) expression -> . expression DIVIDE expression
    (6) expression -> . expression PLUS expression
    (7) expression -> . expression MINUS expression
    (8) expression -> . FLOAT
    (9) expression -> . INT
    (10) expression -> . TEXT
    (12) expression -> . expression LANGLEBRA expression RANGLEBRA LPAR expression COMMA expression RPAR
    (13) expression -> . expression LANGLEBRA expression RANGLEBRA LPAR expression COMMA expression COMMA expression COMMA expression RPAR
    (14) expression -> . expression LANGLEBRA expression RANGLEBRA LPAR RPAR
    (15) expression -> . expression LANGLEBRA expression COMMA expression RANGLEBRA LPAR expression RPAR
    (16) expression -> . expression LANGLEBRA expression COMMA expression RANGLEBRA LPAR expression COMMA expression RPAR
    (17) expression -> . DISCOVER

    FLOAT           shift and go to state 5
    INT             shift and go to state 6
    TEXT            shift and go to state 16
    DISCOVER        shift and go to state 8

    expression                     shift and go to state 15

state 10

    (5) expression -> expression DIVIDE . expression
    (4) expression -> . expression MULTIPLY expression
    (5) expression -> . expression DIVIDE expression
    (6) expression -> . expression PLUS expression
    (7) expression -> . expression MINUS expression
    (8) expression -> . FLOAT
    (9) expression -> . INT
    (10) expression -> . TEXT
    (12) expression -> . expression LANGLEBRA expression RANGLEBRA LPAR expression COMMA expression RPAR
    (13) expression -> . expression LANGLEBRA expression RANGLEBRA LPAR expression COMMA expression COMMA expression COMMA expression RPAR
    (14) expression -> . expression LANGLEBRA expression RANGLEBRA LPAR RPAR
    (15) expression -> . expression LANGLEBRA expression COMMA expression RANGLEBRA LPAR expression RPAR
    (16) expression -> . expression LANGLEBRA expression COMMA expression RANGLEBRA LPAR expression COMMA expression RPAR
    (17) expression -> . DISCOVER

    FLOAT           shift and go to state 5
    INT             shift and go to state 6
    TEXT            shift and go to state 16
    DISCOVER        shift and go to state 8

    expression                     shift and go to state 17

state 11

    (6) expression -> expression PLUS . expression
    (4) expression -> . expression MULTIPLY expression
    (5) expression -> . expression DIVIDE expression
    (6) expression -> . expression PLUS expression
    (7) expression -> . expression MINUS expression
    (8) expression -> . FLOAT
    (9) expression -> . INT
    (10) expression -> . TEXT
    (12) expression -> . expression LANGLEBRA expression RANGLEBRA LPAR expression COMMA expression RPAR
    (13) expression -> . expression LANGLEBRA expression RANGLEBRA LPAR expression COMMA expression COMMA expression COMMA expression RPAR
    (14) expression -> . expression LANGLEBRA expression RANGLEBRA LPAR RPAR
    (15) expression -> . expression LANGLEBRA expression COMMA expression RANGLEBRA LPAR expression RPAR
    (16) expression -> . expression LANGLEBRA expression COMMA expression RANGLEBRA LPAR expression COMMA expression RPAR
    (17) expression -> . DISCOVER

    FLOAT           shift and go to state 5
    INT             shift and go to state 6
    TEXT            shift and go to state 16
    DISCOVER        shift and go to state 8

    expression                     shift and go to state 18

state 12

    (7) expression -> expression MINUS . expression
    (4) expression -> . expression MULTIPLY expression
    (5) expression -> . expression DIVIDE expression
    (6) expression -> . expression PLUS expression
    (7) expression -> . expression MINUS expression
    (8) expression -> . FLOAT
    (9) expression -> . INT
    (10) expression -> . TEXT
    (12) expression -> . expression LANGLEBRA expression RANGLEBRA LPAR expression COMMA expression RPAR
    (13) expression -> . expression LANGLEBRA expression RANGLEBRA LPAR expression COMMA expression COMMA expression COMMA expression RPAR
    (14) expression -> . expression LANGLEBRA expression RANGLEBRA LPAR RPAR
    (15) expression -> . expression LANGLEBRA expression COMMA expression RANGLEBRA LPAR expression RPAR
    (16) expression -> . expression LANGLEBRA expression COMMA expression RANGLEBRA LPAR expression COMMA expression RPAR
    (17) expression -> . DISCOVER

    FLOAT           shift and go to state 5
    INT             shift and go to state 6
    TEXT            shift and go to state 16
    DISCOVER        shift and go to state 8

    expression                     shift and go to state 19

state 13

    (12) expression -> expression LANGLEBRA . expression RANGLEBRA LPAR expression COMMA expression RPAR
    (13) expression -> expression LANGLEBRA . expression RANGLEBRA LPAR expression COMMA expression COMMA expression COMMA expression RPAR
    (14) expression -> expression LANGLEBRA . expression RANGLEBRA LPAR RPAR
    (15) expression -> expression LANGLEBRA . expression COMMA expression RANGLEBRA LPAR expression RPAR
    (16) expression -> expression LANGLEBRA . expression COMMA expression RANGLEBRA LPAR expression COMMA expression RPAR
    (4) expression -> . expression MULTIPLY expression
    (5) expression -> . expression DIVIDE expression
    (6) expression -> . expression PLUS expression
    (7) expression -> . expression MINUS expression
    (8) expression -> . FLOAT
    (9) expression -> . INT
    (10) expression -> . TEXT
    (12) expression -> . expression LANGLEBRA expression RANGLEBRA LPAR expression COMMA expression RPAR
    (13) expression -> . expression LANGLEBRA expression RANGLEBRA LPAR expression COMMA expression COMMA expression COMMA expression RPAR
    (14) expression -> . expression LANGLEBRA expression RANGLEBRA LPAR RPAR
    (15) expression -> . expression LANGLEBRA expression COMMA expression RANGLEBRA LPAR expression RPAR
    (16) expression -> . expression LANGLEBRA expression COMMA expression RANGLEBRA LPAR expression COMMA expression RPAR
    (17) expression -> . DISCOVER

    FLOAT           shift and go to state 5
    INT             shift and go to state 6
    TEXT            shift and go to state 16
    DISCOVER        shift and go to state 8

    expression                     shift and go to state 20

state 14

    (11) var_assign -> TEXT EQUALS . expression
    (4) expression -> . expression MULTIPLY expression
    (5) expression -> . expression DIVIDE expression
    (6) expression -> . expression PLUS expression
    (7) expression -> . expression MINUS expression
    (8) expression -> . FLOAT
    (9) expression -> . INT
    (10) expression -> . TEXT
    (12) expression -> . expression LANGLEBRA expression RANGLEBRA LPAR expression COMMA expression RPAR
    (13) expression -> . expression LANGLEBRA expression RANGLEBRA LPAR expression COMMA expression COMMA expression COMMA expression RPAR
    (14) expression -> . expression LANGLEBRA expression RANGLEBRA LPAR RPAR
    (15) expression -> . expression LANGLEBRA expression COMMA expression RANGLEBRA LPAR expression RPAR
    (16) expression -> . expression LANGLEBRA expression COMMA expression RANGLEBRA LPAR expression COMMA expression RPAR
    (17) expression -> . DISCOVER

    FLOAT           shift and go to state 5
    INT             shift and go to state 6
    TEXT            shift and go to state 16
    DISCOVER        shift and go to state 8

    expression                     shift and go to state 21

state 15

    (4) expression -> expression MULTIPLY expression .
    (4) expression -> expression . MULTIPLY expression
    (5) expression -> expression . DIVIDE expression
    (6) expression -> expression . PLUS expression
    (7) expression -> expression . MINUS expression
    (12) expression -> expression . LANGLEBRA expression RANGLEBRA LPAR expression COMMA expression RPAR
    (13) expression -> expression . LANGLEBRA expression RANGLEBRA LPAR expression COMMA expression COMMA expression COMMA expression RPAR
    (14) expression -> expression . LANGLEBRA expression RANGLEBRA LPAR RPAR
    (15) expression -> expression . LANGLEBRA expression COMMA expression RANGLEBRA LPAR expression RPAR
    (16) expression -> expression . LANGLEBRA expression COMMA expression RANGLEBRA LPAR expression COMMA expression RPAR

    MULTIPLY        reduce using rule 4 (expression -> expression MULTIPLY expression .)
    DIVIDE          reduce using rule 4 (expression -> expression MULTIPLY expression .)
    PLUS            reduce using rule 4 (expression -> expression MULTIPLY expression .)
    MINUS           reduce using rule 4 (expression -> expression MULTIPLY expression .)
    LANGLEBRA       reduce using rule 4 (expression -> expression MULTIPLY expression .)
    $end            reduce using rule 4 (expression -> expression MULTIPLY expression .)
    RANGLEBRA       reduce using rule 4 (expression -> expression MULTIPLY expression .)
    COMMA           reduce using rule 4 (expression -> expression MULTIPLY expression .)
    RPAR            reduce using rule 4 (expression -> expression MULTIPLY expression .)

  ! MULTIPLY        [ shift and go to state 9 ]
  ! DIVIDE          [ shift and go to state 10 ]
  ! PLUS            [ shift and go to state 11 ]
  ! MINUS           [ shift and go to state 12 ]
  ! LANGLEBRA       [ shift and go to state 13 ]


state 16

    (10) expression -> TEXT .

    MULTIPLY        reduce using rule 10 (expression -> TEXT .)
    DIVIDE          reduce using rule 10 (expression -> TEXT .)
    PLUS            reduce using rule 10 (expression -> TEXT .)
    MINUS           reduce using rule 10 (expression -> TEXT .)
    LANGLEBRA       reduce using rule 10 (expression -> TEXT .)
    $end            reduce using rule 10 (expression -> TEXT .)
    RANGLEBRA       reduce using rule 10 (expression -> TEXT .)
    COMMA           reduce using rule 10 (expression -> TEXT .)
    RPAR            reduce using rule 10 (expression -> TEXT .)


state 17

    (5) expression -> expression DIVIDE expression .
    (4) expression -> expression . MULTIPLY expression
    (5) expression -> expression . DIVIDE expression
    (6) expression -> expression . PLUS expression
    (7) expression -> expression . MINUS expression
    (12) expression -> expression . LANGLEBRA expression RANGLEBRA LPAR expression COMMA expression RPAR
    (13) expression -> expression . LANGLEBRA expression RANGLEBRA LPAR expression COMMA expression COMMA expression COMMA expression RPAR
    (14) expression -> expression . LANGLEBRA expression RANGLEBRA LPAR RPAR
    (15) expression -> expression . LANGLEBRA expression COMMA expression RANGLEBRA LPAR expression RPAR
    (16) expression -> expression . LANGLEBRA expression COMMA expression RANGLEBRA LPAR expression COMMA expression RPAR
